@@ -3,21 +3,15 @@ Priority list:
 1-9 as in vim (9=required for next release, 5=would be nice, 1=probably not)
 
 BUGS:
-- http://en.wikipedia.org/wiki/Portal:Current_events - 'f' shows more hints than 'F' (on left side of nav bar)
-- dpb| 09:09:56  dpb :: when I save a page with vimperator, it adds <hints
-     id="hah_hints"></hints> near the end of it.. kinda annoying
-  dpb| 09:11:50  dpb :: and this happens only when saving the complete
-     webpage, saving  only the html works just fine..
 - add window resize support to hints
 - can't reverse tab through the vimperator toolbar
-- gu and gU don't work on local files properly
+- gu and gU don't work on local files properly - still valid?
 - :noremap does not work fully
 - pvh option not working
 - searching backwards incrementally does not work i.e. with 'incsearch' set
 
 FEATURES:
 9 :command for new commands
-9 make hints smarter, not only with characters from from hintchars, but use "NE" or "NP" for 'new posts' e.g. (might be too slow)
 8 add an interface for navigating document relationships
 8 middleclick in content == p, and if command line is open, paste there the clipboard buffer
 7 use ctrl-n/p in insert mode for word completion
