@@ -4,6 +4,8 @@
 	* THIS VERSION ONLY WORKS WITH FIREFOX 3.0
 	* IMPORTANT! options are no longer automatically stored - use the
 	  ~/.vimperatorrc file instead for persistent options
+	* IMPORTANT! Major hints rewrite
+	  read up the new help for the f, F and ; commands for details
 	* added new :mkvimperatorrc command
 	* you can edit textfields with Ctrl-i now using an external editor (thanks to Joseph Xu)
 	* :open, :bmarks, etc. filter on space separated tokens now, so you can
